Correção da responsividade e correção da verificação de campos vazios

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
           </p> <br> 
         </div>
         
-        <form class="formulario col-6 mx-auto">
+        <form class="formulario col-md-6 mx-auto">
           <div class="form-row">
-            <div class="form-group col-6">
+            <div class="form-group col-md-6">
               <label>Nome do Banco Destinatário</label> 
               <input id="nomeBanco" class="form-control input" placeholder="Nome do banco" type="text" required/>
             </div>
-            <div class="form-group col-6">
+            <div class="form-group col-md-6">
               <label>Número do Recibo</label>
               <input id="numeroRecibo" class="form-control input" placeholder="Número do Recibo" type="number" required/>
             </div>
@@ -112,10 +112,10 @@
       <div class="text-center font-110-percent mt-3 col-12" style="color: white;">
         <h3 class="col-12">DESENVOLVEDORES</h3>
         <div class="row">
-          <p class="col-12 col-md-6 text-center">Francisca Natália Simões</p>
-          <p class="col-12 col-md-6 text-center">Francisco Joalison Galvão</p>      
-          <p class="col-12 col-md-6 text-center">fnatalias@hotmail.com</p>
-          <p class="col-12 col-md-6 text-center">galvaoj190@gmail.com</p>
+          <p class="col-6 col-md-6 text-center">Francisca Natália Simões</p>
+          <p class="col-6 col-md-6 text-center">Francisco Joalison Galvão</p>      
+          <p class="col-6 col-md-6 text-center">fnatalias@hotmail.com</p>
+          <p class="col-6 col-md-6 text-center">galvaoj190@gmail.com</p>
         </div>
       </div>
     </div>
